[package]
name = "turbopack-build"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]
# enable "HMR" for embedded assets
dynamic_embed_contents = ["turbo-tasks-fs/dynamic_embed_contents"]
# enable test utilities such as `RuntimeType::Dummy`
test = ["turbopack-ecmascript-runtime/test"]

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
sourcemap = { workspace = true }
swc = "0.266.0"
swc_atoms = "0.5.9"
swc_common = "0.32.1"
swc_ecma_ast = "0.109.1"
swc_ecma_codegen = "0.145.0"
swc_ecma_minifier = "0.187.0"
swc_ecma_parser = "0.140.0"
swc_ecma_visit = "0.95.1"

turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbopack-core = { workspace = true }
turbopack-css = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-ecmascript-runtime = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
