[package]
name = "turbopack-css"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
swc_atoms = "0.5.9"
swc_common = "0.32.1"
swc_css_ast = { version = "0.139.1", features = ["serde"] }
swc_css_codegen = "0.149.1"
swc_css_compat = "0.25.1"
swc_css_modules = "0.27.1"
swc_css_parser = "0.148.1"
swc_css_visit = { version = "0.138.1", features = ["path"] }
turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-hash = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-swc-utils = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
