[package]
name = "turbopack-ecmascript"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
lazy_static = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2.15"
once_cell = { workspace = true }
parking_lot = { workspace = true }
petgraph = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
swc_atoms = "0.5.9"
swc_common = "0.32.1"
swc_ecma_ast = "0.109.1"
swc_ecma_codegen = "0.145.0"
swc_ecma_parser = "0.140.0"
swc_ecma_transforms_base = "0.133.0"
swc_ecma_visit = { version = "0.95.1", features = ["path"] }
swc_node_comments = "0.19.1"
tokio = { workspace = true }
tracing = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-hash = { workspace = true }
turbopack-core = { workspace = true }
turbopack-swc-utils = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
rstest = { workspace = true }
testing.workspace = true
turbo-tasks-memory = { workspace = true }
turbo-tasks-testing = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }

[[bench]]
name = "mod"
harness = false
