[package]
name = "turbopack-swc-utils"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[dependencies]
swc_common = "0.32.1"
turbo-tasks = { workspace = true }
turbopack-core = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
